[package]
name = "ohm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-rustls = "0.23.4"
openssl = "0.10.45"
http = "0.2.8"
regex = "1.7.0"
flate2 = "1.0.25"
serde = "1.0.151"
serde_json = "1.0.91"
serde_yaml = "0.9.16"
mongodb = "2.3.1"
bitflags = "1.3.2"
once_cell = "1.16.0"
