[package]
name = "ohm"
version = "0.2.1"
edition = "2021" # Cargo.toml edition, not Ohm edition.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
openssl = "0.10.45"

http = "0.2.8"
regex = "1.7.0"
toml = "0.5.10"
once_cell = "1.16.0"

mongodb = "2.3.1"
postgres = "0.19.4"
postgres-openssl = "0.5.0"
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1"] }
async-trait = "0.1.6"
redis = "0.22.2"

serde = "1.0.151"
serde_json = "1.0.91"
flate2 = "1.0.25"
brotli = "3.3.4"
